tests/baselines/reference/higherKindedTypes.errors.txt
tests/cases/compiler/higherKindedTypes.ts(37,5): error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
  Type 'F<A>' is not assignable to type 'F<B>'.
tests/cases/compiler/higherKindedTypes.ts(41,7): error TS2322: Type 'FunctorX<string>' is not assignable to type 'FunctorX<number>'.
  Type 'string' is not assignable to type 'number'.
tests/cases/compiler/higherKindedTypes.ts(44,7): error TS2322: Type 'FunctorY<string>' is not assignable to type 'FunctorY<number>'.
  Type 'string' is not assignable to type 'number'.
tests/cases/compiler/higherKindedTypes.ts(47,7): error TS2322: Type 'FunctorX<string>' is not assignable to type 'FunctorX<string[]>'.
  Type 'string' is not assignable to type 'string[]'.
tests/cases/compiler/higherKindedTypes.ts(50,7): error TS2322: Type 'FunctorY<string>' is not assignable to type 'FunctorY<string[]>'.
  Type 'string' is not assignable to type 'string[]'.


==== tests/cases/compiler/higherKindedTypes.ts (5 errors) ====
    interface Functor<A, Container<_T>> {
        map<B>(f: (a: A) => B): Container<B>;
    }
    
    interface FunctorX<A> extends Functor<A, FunctorX> {
        map<B>(f: (a: A) => B): FunctorX<B>;
        xVal: string;
    }
    
    interface FunctorY<A> extends Functor<A, FunctorY> {
        map<B>(f: (a: A) => B): FunctorY<B>;
        yVal: A;
    }
    
    declare const initialX: FunctorX<string>;
    declare const initialY: FunctorY<string>;
    
    const resultX1 = initialX.map(val => val.length);
    const expectX1: FunctorX<number> = resultX1;
    
    const resultY1 = initialY.map(val => val.length);
    const expectY1: FunctorY<number> = resultY1;
    
    const resultX2 = initialX.map(val => [val]);
    const expectX2: FunctorX<string[]> = resultX2;
    
    const resultY2 = initialY.map(val => [val]);
    const expectY2: FunctorY<string[]> = resultY2;
        
    
    function staticMap<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        const result = fa.map(f);
        return result;
    }
    
    function staticMapBadImplementation<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        return fa;
        ~~~~~~~~~~
!!! error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
!!! error TS2322:   Type 'F<A>' is not assignable to type 'F<B>'.
    }
    
    const resultX3 = staticMap(initialX, val => val.length);
    const expectX3: FunctorX<number> = resultX3;
          ~~~~~~~~
!!! error TS2322: Type 'FunctorX<string>' is not assignable to type 'FunctorX<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    
    const resultY3 = staticMap(initialY, val => val.length);
    const expectY3: FunctorY<number> = resultY3;
          ~~~~~~~~
!!! error TS2322: Type 'FunctorY<string>' is not assignable to type 'FunctorY<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    
    const resultX4 = staticMap(initialX, val => [val]);
    const expectX4: FunctorX<string[]> = resultX4;
          ~~~~~~~~
!!! error TS2322: Type 'FunctorX<string>' is not assignable to type 'FunctorX<string[]>'.
!!! error TS2322:   Type 'string' is not assignable to type 'string[]'.
    
    const resultY4 = staticMap(initialY, val => [val]);
    const expectY4: FunctorY<string[]> = resultY4;
          ~~~~~~~~
!!! error TS2322: Type 'FunctorY<string>' is not assignable to type 'FunctorY<string[]>'.
!!! error TS2322:   Type 'string' is not assignable to type 'string[]'.
    